pyinterp/pyinterp/pyinterp/tests/must_pass/scope/errors/local_function_def.py
def f():
    def g():
        print(x)
    g()

f()
g